2003-10-16  Rob Savoye   <rob@welcomehome.org>

	* packaging/prototype: Remove sh-hms-sim.exp, add sh-sim.

2003-10-13  Ben Elliston  <bje@wasabisystems.com>

	* baseboards/sh-hms-sim.exp: Remove. Replaced by sh-sim.exp.

2003-10-11  Corinna Vinschen  <vinschen@redhat.com>

	* baseboards/sh-sim.exp: New file.

2003-10-11  Ben Elliston  <bje@wasabisystems.com>

	* NEWS: Tidy.
	* AUTHORS: Don't list maintainers, reference MAINTAINERS instead.

2003-10-08  Ben Elliston  <bje@wasabisystems.com>

	* i960glue.c: Remove.
	* packaging/pkg/prototype: Remove i960glue.c.

2003-10-07  Ben Elliston  <bje@wasabisystems.com>

	* contrib/README: Remove.
	* contrib/testit: Remove bitrotten script.
	* contrib/test-g++: Likewise.
	* contrib/test-tool: Likewise.

2003-08-23  Ben Elliston  <bje@wasabisystems.com>

	* TODO: Tidy.
	* contrib/README: Bring up to date.

2003-08-23  Corinna Vinschen  <vinschen@redhat.com>

	* config/sid.exp: Add gdb settings to use no hardware watchpoints.

2003-08-23  Ben Elliston  <bje@wasabisystems.com>

	* README: Update section on reporting bugs.

2003-08-22  Ben Elliston  <bje@wasabisystems.com>

	* lib/kermit.exp: Document procs.
	* lib/ftp.exp: Likewise.

2003-08-19  Ben Elliston  <bje@wasabisystems.com>

	* contrib/testit: Run wish via /usr/bin/env for portability.

2003-08-18  Ben Elliston  <bje@wasabisystems.com>

	* Makefile.am: Tidy comments and unused command lines.
	* Makefile.in: Regenerate.
	* testsuite/libdejagnu/Makefile.in: Likewise.

	* contrib/bluegnu2.0.3: Remove unsupported subtree.

2003-08-18  Ben Elliston  <bje@wasabisystems.com>

	* MAINTAINERS: New file.

2003-08-17  Ben Elliston  <bje@wasabisystems.com>

	* doc/Makefile.am (AUTOMAKE_OPTIONS): Remove empty variable.
	* doc/Makefile.in: Regenerate.
	
2003-08-16  Ben Elliston  <bje@wasabisystems.com>

	* doc/overview.sgml (overview): Start overhauling chapter.
	
	* doc/README.Writers: New document on style conventions.